Bug 110232 - Stereotypes of attributes and methods aren't displayed in class diagrams
Summary: Stereotypes of attributes and methods aren't displayed in class diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-05 14:23 UTC by Tassilo Horn
Modified: 2017-01-09 00:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.2 (KDE Applications 16.12.2)
Sentry Crash Report:


Attachments
xmi testcase (84.54 KB, text/x-xmi)
2015-02-25 12:43 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tassilo Horn 2005-08-05 14:23:25 UTC
Version:           1.4.2 (using KDE 3.4.2, Gentoo)
Compiler:          gcc version 3.4.4 (Gentoo 3.4.4, ssp-3.4.4-1.0, pie-8.7.8)
OS:                Linux (i686) release 2.6.12-nitro2

In a classes properties one can define stereotypes for the class's attributes, the methods, templates and for the class itself.

But only the stereotype of the class is displayed in the diagram.

I have Settings -> Class Settings -> Visibility -> [X] Show stereotype

and MyClass -> Properties -> Display Options -> Show -> [X] Stereotype
Comment 1 Ralf Habacker 2015-02-25 12:43:06 UTC
Created attachment 91291 [details]
xmi testcase
Comment 2 sudden6 2017-01-07 23:49:42 UTC
Still present in 2.20.2
Comment 3 Ralf Habacker 2017-01-09 00:23:54 UTC
Git commit 57a3331dfebe6a0f315f4e4b1a7672d353185bab by Ralf Habacker.
Committed on 09/01/2017 at 00:21.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Stereotypes of attributes and methods aren't displayed in class diagrams'.
FIXED-IN: 2.21.2 (KDE Applications 16.12.2)

M  +6    -1    umbrello/umlmodel/attribute.cpp
M  +1    -1    umbrello/umlmodel/attribute.h
M  +2    -1    umbrello/umlmodel/checkconstraint.cpp
M  +1    -1    umbrello/umlmodel/checkconstraint.h
M  +2    -1    umbrello/umlmodel/classifierlistitem.cpp
M  +1    -1    umbrello/umlmodel/classifierlistitem.h
M  +2    -1    umbrello/umlmodel/entityattribute.cpp
M  +1    -1    umbrello/umlmodel/entityattribute.h
M  +2    -1    umbrello/umlmodel/enumliteral.cpp
M  +1    -1    umbrello/umlmodel/enumliteral.h
M  +2    -1    umbrello/umlmodel/foreignkeyconstraint.cpp
M  +1    -1    umbrello/umlmodel/foreignkeyconstraint.h
M  +12   -2    umbrello/umlmodel/operation.cpp
M  +1    -1    umbrello/umlmodel/operation.h
M  +11   -3    umbrello/umlmodel/template.cpp
M  +1    -1    umbrello/umlmodel/template.h
M  +1    -1    umbrello/umlmodel/uniqueconstraint.cpp
M  +1    -1    umbrello/umlmodel/uniqueconstraint.h
M  +5    -5    umbrello/umlwidgets/classifierwidget.cpp

https://commits.kde.org/umbrello/57a3331dfebe6a0f315f4e4b1a7672d353185bab