Fix 'Stereotypes of attributes and methods aren't displayed in class diagrams'.

BUG:110232
FIXED-IN: 2.21.2 (KDE Applications 16.12.2)