umbrello/umlmodel/entityattribute.h
@@ -63,7 +63,7 @@ public:
     void setNull(const bool null);
     bool getNull() const;
 
-    QString toString(Uml::SignatureType::Enum sig = Uml::SignatureType::NoSig);
+    QString toString(Uml::SignatureType::Enum sig = Uml::SignatureType::NoSig, bool withStereotype=false);
 
     virtual void saveToXMI(QDomDocument& qDoc, QDomElement& qElement);
 
